[tool.poetry]
name = "bayesian-inference"
version = "0.1.0"
description = ""
authors = ["Jiri Klic <web@jiriklic.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
jupyterlab = "^3.4.2"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
sympy = "^1.10.1"
ipywidgets = "^7.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
